# AgentReplay

./: .gitignore  AGENTREPLAY_PLAN.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: regression.yml
agentreplay/: __init__.py  cli.py
agentreplay/integrations/: __init__.py  langgraph.py  pytest_plugin.py
agentreplay/recorder/: __init__.py  clock.py  collector.py  interceptor.py  rng.py  tool_wrapper.py  trace_writer.py
agentreplay/replayer/: __init__.py  divergence.py  matcher.py  replay_engine.py
agentreplay/schema/: __init__.py  trace.py
dashboard/app/: layout.tsx  page.tsx
dashboard/components/: DiffView.tsx  EventDetail.tsx  Timeline.tsx
dashboard/lib/: diff.ts  types.ts
examples/research_agent/: agent.py  conftest.py  record.py
spike/: agent.py  spike.py  test_spike.py
tests/: __init__.py  conftest.py  test_clock.py  test_divergence.py  test_integration.py  test_interceptor.py  test_matcher.py  test_pytest_plugin.py  test_replay_engine.py  test_rng.py  test_schema.py  test_tool_wrapper.py  test_trace_writer.py
