[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[project]
name = "agentreplay"
version = "0.1.0"
description = "Deterministic record/replay and regression-testing harness for LangGraph agents."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["langgraph", "langchain", "testing", "replay", "agents", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "langgraph>=0.2",
    "langchain-core>=0.2",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
agentreplay = "agentreplay.cli:main"

[project.entry-points."pytest11"]
agentreplay = "agentreplay.integrations.pytest_plugin"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
